--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>DramasMood 🎬</h1>
+    <h1>dramamovies 🎬</h1>
     <input type="text" id="search" placeholder="Search Movies, Dramas...">
     <nav>
       <a href="categories/bollywood.html">Bollywood</a>
