--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>dramamovies - Watch & Download</title>
+  <title>Dramamovies - Watch & Download</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <header>
-    <h1>dramamovies 🎬</h1>
+    <h1>Dramamovies 🎬</h1>
     <input type="text" id="search" placeholder="Search Movies, Dramas...">
     <nav>
       <a href="categories/bollywood.html">Bollywood</a>
