--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <header>
     <h1>Dramamovies 🎬</h1>
     <input type="text" id="search" placeholder="Search Movies, Dramas...">
+      <nav class="main-menu">
+    <a href="index.html">Home</a>
+    <a href="categories/bollywood.html">Bollywood</a>
+    <a href="categories/korean.html">Korean</a>
+    <a href="categories/webseries.html">Web Series</a>
+    <a href="upload.html">Upload</a>
+  </nav>
     <nav>
       <a href="categories/bollywood.html">Bollywood</a>
       <a href="categories/korean.html">Korean</a>
